--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# tools and db directory are not needed in the repo
+tools/
+musicbot/db/*
+musicbot/logs/*
+
 # ides
 .vscode
 
@@ -94,7 +99,7 @@ profile_default/
 ipython_config.py
 
 # pyenv
-.python-version
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
