--- a/musicbot/src/requirements.txt
+++ b/musicbot/src/requirements.txt
@@ -4,4 +4,4 @@ spotipy==2.19.0
 sty==1.0.4
 tinydb==4.6.1
 tinydb-serialization==2.1.0
-youtube_dl>=2021.12.17
+youtube_dl @ https://github.com/ytdl-org/ytdl-nightly/archive/refs/tags/2023.08.07.tar.gz
