--- a/musicbot/src/requirements.txt
+++ b/musicbot/src/requirements.txt
@@ -4,4 +4,7 @@ spotipy==2.19.0
 sty==1.0.4
 tinydb==4.6.1
 tinydb-serialization==2.1.0
-yt-dlp==2023.7.6
+yt-dlp@git+https://github.com/yt-dlp/yt-dlp@master
+requests==2.31.0
+beautifulsoup4==4.12.2
+pyjq==2.6.0
